# embassy-stm32-fsmc-display-interface

./: Cargo.toml  Justfile  README.md
example/: Cargo.toml  README.md
example/.cargo/: config.toml
example/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
