[package]
name = "embassy-stm32-fsmc-ili9341"
version = "0.1.0"
edition = "2024"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
publish = false

[features]
default = ["stm32f407ve"]
stm32f407ve = ["embassy-stm32/stm32f407ve"]

[dependencies]
embassy-stm32-fsmc-display-interface = { path = "../lib" }

embassy-stm32 = { version = "0.4.0", features = ["defmt", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
display-interface = { version = "0.5.0", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
ili9341 = "0.6.0"
embedded-graphics = "0.8.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }