[package]
name = "embassy-stm32-fsmc-display-interface"
version = "0.1.0"
edition = "2024"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
description = "DisplayInterface implementation for STM32 FSMC peripheral using Embassy HAL"
repository = "https://github.com/kriomant/embassy-stm32-fsmc-display-interface"
keywords = ["embedded", "stm32", "fsmc", "display"]
categories = ["embedded", "no-std"]

[dependencies]
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", default-features = false }
display-interface = { version = "0.5.0", default-features = false }
