[package]
name = "embassy-stm32-fsmc-display-interface"
version = "0.2.0"
edition = "2024"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
description = "DisplayInterface implementation for STM32 FSMC peripheral using Embassy HAL"
repository = "https://github.com/kriomant/embassy-stm32-fsmc-display-interface"
keywords = ["embedded", "stm32", "fsmc", "display"]
categories = ["embedded", "no-std"]
license = "MIT"

[dependencies]
embassy-stm32 = { version = ">=0.4,<0.6", default-features = false }
display-interface = { version = "0.5.0", default-features = false }
